--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 /* Styling for the Enitre Webpage */
 * {
     background-color: antiquewhite;
+    color: blue;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 /* Styling for the Header Section */
@@ -32,13 +34,15 @@ header nav ul li {
 #about-me h2 {
     text-align: center;
     font-size: 150%;
+    font-style: italic;
     margin-bottom: 20px;
 }
 
 #about-me img {
+    size: 400px;
     width: 20%;
     float: right;
-    margin-bottom: 20px;
+    margin-right: 50px;
 }
 
 #about-me p {
@@ -57,42 +61,54 @@ header nav ul li {
 #my-work h2 {
     text-align: center;
     font-size: 150%;
+    font-style: italic;
+    margin: auto;
+}
+
+#my-work ul li h3 {
+    text-align: center;
+    font-size: 120%;
+    font-style: italic;
+    margin-top: 20px;
     margin-bottom: 20px;
 }
 
-#my-work ul li a {
+#my-work ul li a img {
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     align-items: center;
+    height: 50px;
+}
+
+#my-work ul li#my-first-deployed-application a img {
+    width: 80%;
+    height: 100%;
     justify-content: center;
-    flex-direction: column;
-    width: 1000px;
-    height: 1000px;
+    margin: auto;
 }
 
-#my-first-deployed-application a {
-    height: auto;
-    width: 100%; 
-    margin-bottom: 20px;
-}
-
-#my-other-applications a {
-    height: auto;
-    width: 50%; 
-    margin-bottom: 20px;
+#my-work ul li#my-other-applications a img {
+    width: 60%;
+    height: 100%;
+    justify-content: center;
+    margin: auto;
 }
 
 /* Styling for the Contact Information Section */
 #contact-info {
-    margin-top: 75px;
+    margin-top: 50px;
 }
 
 #contact-info h2 {
     text-align: center;
     font-size: 150%;
+    font-style: italic;
     margin-bottom: 20px;
 }
 
 #contact-info ul li {
     text-align: center;
+    flex-wrap: wrap;
     font-size: 150%;
 }
